My personal site

--- a/index.html
+++ b/index.html
@@ -18,31 +18,29 @@
         <span class="navbar-toggle" id="js-navbar-toggle">
             <i class="fas fa-bars"></i>
         </span>
-        <a href="#" class="logo">Nomadic Madhur</a>
+        <a href="#" class="logo">Lwazi Mazibuko</a>
         <ul class="main-nav" id="js-menu">
             <li>
                 <a href="#" class="nav-links">Home</a>
             </li>
             <li>
-                <a href="pages/AboutUsComponent.html" class="nav-links">About Us</a>
+                <a href="pages/AboutUsComponent.html" class="nav-links">About Me</a>
             </li>
             <li>
-                <a href="pages/BlogsComponent.html" class="nav-links">Blogs</a>
+                <a href="pages/BlogsComponent.html" class="nav-links">Essays</a>
             </li>
         </ul>
     </nav>
 
     <div class="container">
         <div>
-            <img src="images/cover.jpg" class="cover"/>
         </div>
 
         <!-- Destination 1 -->
         <div class="destinations-container">
             <div>
                 <figure>
-                    <img src="images/mountains.jpg" class="destinations" alt="Destinations"/>
-                    <figcaption>Fig.1 - Coorg, Karnataka, India.</figcaption>
+                  
                 </figure>
             </div>
             <div class="caption">
@@ -59,8 +57,7 @@
             </div>
             <div>
                 <figure>
-                    <img src="images/beaches.jpg" class="destinations" alt="Destinations"/>
-                    <figcaption>Fig.2- Goa, India</figcaption>
+                
                 </figure>
             </div>
         </div>
@@ -69,7 +66,7 @@
     <div class="clear-div"></div>
 
     <footer class="footer">
-        <p class="footer-content">© 2020 - Madhur Taneja, All Copyrights Reserved</p>
+        <p class="footer-content">© 2024 - Lwazi Mazibuko, All Copyrights Reserved</p>
     </footer>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
