--- a/pages/AboutUsComponent.html
+++ b/pages/AboutUsComponent.html
@@ -18,13 +18,13 @@
         <span class="navbar-toggle" id="js-navbar-toggle">
             <i class="fas fa-bars"></i>
         </span>
-        <a href="#" class="logo">Nomadic Madhur</a>
+        <a href="#" class="logo">Lwazi Mazibuko</a>
         <ul class="main-nav" id="js-menu">
             <li>
                 <a href="../index.html" class="nav-links">Home</a>
             </li>
             <li>
-                <a href="#" class="nav-links">About Us</a>
+                <a href="#" class="nav-links">About Me</a>
             </li>
             <li>
                 <a href="./BlogsComponent.html" class="nav-links">Blogs</a>
@@ -35,20 +35,19 @@
     <main class="grid-container">
         <section class="grid-item profile">
             <img src="../images/profile_pic.jpg" class="dp" />
-            <h2>Madhur Taneja</h2>
-            <h4>Software Developer</h4>
+            <h2>Lwazi Mazibuko</h2>
+            <h4>Entrapreneuer</h4>
         </section>
         <section class="grid-item summary">
             <p class="summary-text">
-                An enthusiast coder and Web Developer who's looking forward to acquiring new skills and giving back to the team. Currently working as a Software Engineer at TEKsystems. A Computer Science Engineering (CSE) graduate from Chitkara University and a former-member of University Coding Academy (UCA). A Nanodegree graduate in Deep Learning Foundations Nanodegree. Apart from academics, was the hostel head for Bits N' Bytes (BNB) Techno-Cultural Club. In free time, love to watch and play football, listen to music and watch movies. Like Punk Rock, Hip-Hop, Acoustic Covers in music genres. Have a knack for travelling to new places and exploring new cultures and cuisines. Eagerly waiting to explore the world even further!
-            </p>
+                    Just trying to breath            </p>
         </section>
     </main>
 
     <div class="clear-div"></div>
 
     <footer class="aboutus-footer">
-        <h3>Contact Us</h3>
+        <h3>Get in touch</h3>
         <div class="footer-container">
             <div class="flex-column">
                 <h4>Location</h4>
