--- a/pages/BlogsComponent.html
+++ b/pages/BlogsComponent.html
@@ -18,16 +18,16 @@
         <span class="navbar-toggle" id="js-navbar-toggle">
             <i class="fas fa-bars"></i>
         </span>
-    <a href="#" class="logo">Nomadic Madhur</a>
+    <a href="#" class="logo">Lwazi Mazibuko</a>
     <ul class="main-nav" id="js-menu">
         <li>
             <a href="../index.html" class="nav-links">Home</a>
         </li>
         <li>
-            <a href="./AboutUsComponent.html" class="nav-links">About Us</a>
+            <a href="./AboutUsComponent.html" class="nav-links">About Me</a>
         </li>
         <li>
-            <a href="#" class="nav-links">Blogs</a>
+            <a href="#" class="nav-links">Essays</a>
         </li>
     </ul>
 </nav>
@@ -70,7 +70,7 @@
 <div class="clear-div"></div>
 
 <footer class="footer">
-    <p class="footer-content">© 2020 - Madhur Taneja, All Copyrights Reserved</p>
+    <p class="footer-content">© 2024 - Lwazi Mazibuko, All Copyrights Reserved</p>
 </footer>
 
 <script src="../js/app.js"></script>
