--- a/pages/AboutUsComponent.html
+++ b/pages/AboutUsComponent.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1" name="viewport" />
 
-    <title>Travel Blog</title>
+    <title>Personal Blog</title>
     <meta name="description" content="A blog website about travelling">
     <meta name="author" content="Madhur Taneja">
 
@@ -40,7 +40,7 @@
         </section>
         <section class="grid-item summary">
             <p class="summary-text">
-                    Just trying to breath            </p>
+                Just trying to breath            </p>
         </section>
     </main>
 
