--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Travel Blog</title>
+    <title>Personal Blog</title>
     <meta name="description" content="A blog website about travelling">
     <meta name="author" content="Madhur Taneja">
 
@@ -45,7 +45,7 @@
             </div>
             <div class="caption">
                 <h5>Mountains</h5>
-                <p>Everybody wants to reach the peak, but there is no growth on the top of a mountain. It is in the valley that we slog through the lush grass and rich soil, learning and becoming what enables us to summit life’s next peak. That's why mountains are always my favorite destinations.</p>
+                <p>Everybody wants to reach the peak, but there is no growth on the top of a mountain. It is in the valley that we slog through the lush grass and rich soil, learning and becoming what enables us to summit life's next peak. That's why mountains are always my favorite destinations.</p>
             </div>
         </div>
 
